--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="website.html">About Me</a>
+                        <a href="index.html">About Me</a>
                     </li>
                     <li>
                         <a href="cv.pdf">Resume/CV</a>
