--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/">About Me</a>
+                        <a href="index.html">About Me</a>
                     </li>
                     <li>
                         <a href="cv.pdf">Resume/CV</a>
