--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
             <div class="col-md-8">
                 <p>If you have any comments on the website or would like to reach me, you can send me an email at <a href="mailto:pulivarthi_jithendra@srmap.edu.in">pulivarthi_jithendra@srmap.edu.in</a>, or use the form below.</p>
                 <br>
-                <form method="POST" action="https://formspree.io/f/mnqlgoag" name="sentMessage" id="contactForm" novalidate>
+                <form method="POST" action="https://formspree.io/f/moqykprz" name="sentMessage" id="contactForm" novalidate>
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Your Name:</label>
