--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                         <a href="index.html">About Me</a>
                     </li>
                     <li>
-                        <a href="cv.pdf">Resume/CV</a>
+                        <a href="Resume.pdf">Resume/CV</a>
                     </li>
                     <li>
                         <a href="projects.html">Projects</a>
@@ -109,30 +109,30 @@
         <!-- Contact Form -->
         <div class="row">
             <div class="col-md-8">
-                <p>If you have any comments on the website or would like to reach me, you can send me an email at <a href="mailto:pulivarthi_jithendra@srmap.edu.in">pulivarthi_jithendra@srmap.edu.in</a>, or use the form below.</p>
+                <p>Feel free to reach out me at <a href="mailto:jpulivarthi@hawk.iit.edu">jpulivarthi@hawk.iit.edu</a>, or use the form below.</p>
                 <br>
                 <form method="POST" action="https://formspree.io/f/moqykprz" name="sentMessage" id="contactForm" novalidate>
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Your Name:</label>
-                            <input name="name" type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
+                            <input name="name" type="text" class="form-control" id="name" required data-validation-required-message="Your Beautiful Name.">
                             <p class="help-block"></p>
                         </div>
                     </div>
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Email Address:</label>
-                            <input name="_replyto" type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
+                            <input name="_replyto" type="email" class="form-control" id="email" required data-validation-required-message="Your Email Address.">
                         </div>
                     </div>
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Message:</label>
-                            <textarea name="message_body" rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+                            <textarea name="message_body" rows="10" cols="100" class="form-control" id="message" required data-validation-required-message=" Kindly Let me know which insights u are reaching out to me" maxlength="999" style="resize:none"></textarea>
                         </div>
                     </div>
                     <div id="success"></div>
-                    <input type="hidden" name="_next" value="thanks.html" />
+                    <input type="hidden" name="_next" value="Lots Of Love Jithendra.html" />
                     <button type="submit" value="Send" class="btn btn-primary">Send Message</button>
                 </form>
             </div>
