--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href="index.html">About Me</a>
                     </li>
                     <li>
-                        <a href="cv.pdf">Resume/CV</a>
+                        <a href="Resume.pdf">Resume/CV</a>
                     </li>
                     <li>
                         <a href="projects.html">Projects</a>
@@ -104,7 +104,7 @@
                         <a href="https://github.com/jithendra795" target="_blank" class"icon_hover">
                             <img src="github.png" class="icon">
                         </a>
-                        <a href="https://www.linkedin.com/in/pulivarthi-jithendra-055a4b1b5/" target="_blank" class"icon_hover">
+                        <a href="https://www.linkedin.com/in/jithendra-pulivarthi-216835248/" target="_blank" class"icon_hover">
                             <img src="linkedin.png" class="icon">
                         </a>
                     </div>
@@ -116,37 +116,36 @@
                 <div class="col-lg-12">
                     <h1 class="page-header">About Me</h1>
                     <p>
-                        Hello! My name is Jithendra Pulivarthi, and I am a electroics engineer. I am currently in my 4th year at the <a href="https://srmap.edu.in/">SRM University AP</a>, completing a Electroics and Communication Engineering.
+                        Hello! My name is Jithendra Pulivarthi, I am Pursuing My Master's in VLSI and Microeletcronics Major at <a href="https://www.iit.edu/">Illinios Institute of Technology</a>, Looking for an Internship and Full-Time Job Opportunity. 
+                        .
                     </p>
 
                     <p>
-                        Besides Acadamics, some of my interests include playing Chess, Badminton, SRM E-CELL, Meditaion and Yoga club. You can find out more about me throughout this website, and more details about my specific interests below.
-                    </p>
+                        Besides Acadamics, some of my interests include playing Badminton, Meditaion and Yoga, Volunteer. 
                 </div>
             </div>
             <!-- /.row -->
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Interests</h1>
+                    <h1 class="page-header">Technical Skills</h1>
                 </div>
             </div>
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-6">
-                    <h3>VLSI</h3>
+                    <h3>Hardware Skills</h3>
                     <ul>
-                        <li>Verilog, VHDL, SOC, CMOS</li>
-                        <li>Communication Protocols</li>
-                        <li>Analog Electroics, Digital Electroics</li>
+                        <li>Verilog, VHDL, TcL/Tk, SoC, CMOS(FinFET)</li>
+                        <li>Advance VLSI Design, CAD using VLSI Design</li>
+                        <li>High Performance VLSI, Digital Electroics</li>
                     </ul>
                 </div>
                 <div class="col-lg-6">
-                    <h3>Computer science</h3>
+                    <h3>Programming Skills</h3>
                     <ul>
-                        <li>C, Python, ML, R</li>
+                        <li>C, Python, ML</li>
                         <li>CSS, HTML</li>
-                        <li>SQL</li>
                     </ul>
                 </div>
             </div>
