--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
                         <a href="index.html">About Me</a>
                     </li>
                     <li>
-                        <a href="cv.pdf">Resume/CV</a>
+                        <a href="Resume.pdf">Resume/CV</a>
                     </li>
                     <li>
                         <a href="projects.html">Projects</a>
@@ -107,11 +107,37 @@
         <div class="row">
             <div class="col-lg-12">
                 <a href="https://github.com/jithendra795">
+                    <h2 class="project-title">Performance Evaluation of 6T and 8T SRAM cell using ASAP7 Technology</h2>
+                </a>
+                <p>
+                    In this project 6T and 8T SRAM is designed in ASAP7 and parameters analysed using SPICE, Cscope. Also compared the layout vs schematic (DRC, LVS, PEX) synthesis • Tools / Technologies: ASPA7(7nm), Cadence, SPICE.
+                </p>
+            </div>
+        </div>
+
+        <hr class="thick-hr"/>
+        
+        <div class="row">
+            <div class="col-lg-12">
+                <a href="https://github.com/jithendra795">
                     <h2 class="project-title"> Implementation of the Communication Protocol SPI by the HDL Verilog Language 
                     </h2>
                 </a>
                 <p>
-                    In this project design and development of SPI by create the single inputMaster and single input Slave. The Finite State-Machines (FSM) are used for verification purposes.From the RTL synthesis results are covered. 
+                    In this project design and development of SPI by create the single input Master and single input Slave. The Finite State Machines (FSM) are used for verification purposes. From the RTL synthesis results are covered. • Tools / Technologies: EDA tools, Model sim Altera, XILINX(VIVADO), SPI • Presented in Research Day 2020 SRM University, AP. • Submitted in IEEE
+                </p>
+            </div>
+        </div>
+        
+        <hr class="thick-hr"/>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <a href="https://doi.org/10.36227/techrxiv.21761438.v1">
+                    <h2 class="project-title">Design of a Unified XOR Ring Oscillator PUF-TRNG Circuit in 45nm CMOS Technology</h2>
+                </a>
+                <p>
+                    In the previous research work various architectures and designs are discussed, so in this current work we consider the two types of the core form of unified RO-PUF TRNG circuit, the calibration and parameters analysis are taken while comparing with previous RO-PUF-TRNG papers. • Tools / Technologies: Cadence (VM ware), CMOS, FPGA • Presented in Research Day 2022 SRM University, AP • Published in IEEE.
                 </p>
             </div>
         </div>
@@ -120,11 +146,11 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <a href="https://github.com/jithendra795">
+                <a href="http://www.irphouse.com/ijert21/ijertv14n7_06.pdf">
                     <h2 class="project-title">Image Enhancement Based on Hardware Description Language</h2>
                 </a>
                 <p>
-                    The project deals with image enhancement techniques.The main theme is the enhancement of image to find A) Threshold Operation  B) Invert Operation  C) Brightness Operation
+                    The project deals with image enhancement techniques. The main theme is the enhancement of image to find A) Threshold Operation B) Invert Operation C) Brightness Operation. • Tools / Technologies: MATLAB, XILINX(VIVADO), DSP. • Presented in Research Day 2020 SRM University, AP. • Published in IRPH.
                 </p>
             </div>
         </div>
@@ -137,7 +163,7 @@
                     <h2 class="project-title">Performance Evaluation of 6T SRAM cell using 90 nm Technology</h2>
                 </a>
                 <p>
-                    in this project performance evaluation of 6tsram cell topology and analyzing the different parameters using 90nm node.
+                    In this project performance evaluation of 6tsram cell topology and analyzing the different parameters using 90nm node. • Tools / Technologies: Cadence (VM ware), CMOS • Presented in Research Day 2021 SRM University, AP • Published in IJERT.
                 </p>
             </div>
         </div>
@@ -146,7 +172,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <a href="https://github.com/jithendra795">
+                <a href="https://www.ijert.org/performance-evaluation-of-6t-sram-cell-using-90-nm-technology">
                     <h2 class="project-title">DESIGN AND SIMULATION ALU USING VERILOG </h2>
                 </a>
                 <p>
