--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Jithendra Pulivarthi">
     <meta name="notice" content"NOTICE: This file has been modified from the original by Jithendra Pulivarthi.">
 
-    <title>Sai Nived - Personal Website</title>
+    <title>Jithendra Pulivarthi - Personal Website</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
                         <a href="index.html">About Me</a>
                     </li>
                     <li>
-                        <a href="cv.pdf">Resume/CV</a>
+                        <a href="Resume.pdf">Resume/CV</a>
                     </li>
                     <li>
                         <a href="projects.html">Projects</a>
@@ -106,30 +106,33 @@
         <!-- Publication section -->
         <div class="row">
             <div class="col-lg-12">
-                <span class="pub-title"> Image Enhancement Using VHDL (Accepted)</span>
-                <p>By: Sai Nived, P. Jithendra, G. Sai Dheeraj and A. Rohith Kumar.</p>
-                <p>The paper basically deals with image enhancement techniques.
-                    The enhancement operations are done using VHDL. The main theme is to enhance
-                    image using Threshold Operation, Invert Operation, Brightness Operation<br><br>
+                <span class="pub-title"> Performance Evaluation of 6T SRAM cell using 90 nm Technology</span>
+                <p>By: P. Jithendra, V. Koundinya, D. Jayanth, M. Karun Chand .</p>
+                <p>SRM University, AP<br><br>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
-                <span class="pub-title"> Implementation of the Communication Protocols SPI by the HDL-Verilog Language (Submitted)</span>
-                <p>By: Sai Nived, P. Jithendra, A. Rohith Kumar, A. Kaushik sai and Dr. Siva Shankar Yellampalli.</p>
-                <p>In this paper design and development of SPI
-                    protocol is presented. The SPI module permits synchronous,
-                    full duplex serial communication between the microcontroller
-                    units and peripheral devices. The SPI master is the device that
-                    possesses the clock. The data transmitted in the SPI protocol
-                    is synchronised to the clock possessed by the master. In this
-                    paper a single Master and Slave have been designed and
-                    implemented in Verilog. The Finite-State-Machines (FSM)
-                    and the state diagrams of both Master and Slave are used for
-                    verification purposes. The input clock Frequency is taken
-                    50MHz. Voltage taken is 1.8V. The designed SPI module can
-                    transfer data up to 7Mbps.<br><br>
+                <span class="pub-title"> Design of a Unified XOR Ring Oscillator PUF-TRNG Circuit in 45nm CMOS Technology </span>
+                <p>By: P. Jithendra, Sai Nived, R. Nanditha </p>
+                <p>SRM University, AP<br><br>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <span class="pub-title"> Image Enhancement Using VHDL</span>
+                <p>By: Sai Nived, P. Jithendra, G. Sai Dheeraj, A. Rohith Kumar.</p>
+                <p>SRM University, AP<br><br>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <span class="pub-title"> Implementation of the Communication Protocols SPI by the HDL-Verilog Language</span>
+                <p>By: Sai Nived, P. Jithendra, A. Rohith Kumar, A. Kaushik sai, Dr. Siva Shankar Yellampalli.</p>
+                <p>SRM University, AP<br><br>
             </div>
         </div>
         <!-- /.row -->
